created target view

--- a/ConsoleTest/ConsoleTest.csproj
+++ b/ConsoleTest/ConsoleTest.csproj
@@ -14,4 +14,13 @@
     <ProjectReference Include="..\Postulate.Integration.SqlServer\Postulate.Integration.SqlServer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="config.azure.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="config.local.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
