--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Excel2SqlServer" Version="1.0.1" />
+    <PackageReference Include="JsonSettings.Library" Version="1.0.14" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
