--- a/SqlIntegration.Library/SqlIntegration.Library.csproj
+++ b/SqlIntegration.Library/SqlIntegration.Library.csproj
@@ -7,6 +7,10 @@
     <Product>SqlIntegration.Library</Product>
     <Description>ETL library in progress for SQL Server, BulkInsert static class</Description>
     <Version>0.1.0-alpha</Version>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/adamosoftware/SqlIntegration</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/adamosoftware/SqlIntegration</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +18,13 @@
     <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="Postulate.SqlServer" Version="1.3.16" />
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
