--- a/SqlIntegration.Library/SqlIntegration.Library.csproj
+++ b/SqlIntegration.Library/SqlIntegration.Library.csproj
@@ -15,9 +15,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrator.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AdoUtil.Library" Version="1.1.1" />
     <PackageReference Include="Dapper" Version="2.0.30" />
-    <PackageReference Include="Postulate.SqlServer" Version="1.3.16" />
+    <PackageReference Include="Dapper.QX" Version="1.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
   </ItemGroup>
 
