--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper.QX" Version="1.0.0" />
     <PackageReference Include="Excel2SqlServer" Version="1.0.1" />
     <PackageReference Include="JsonSettings.Library" Version="1.0.15" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
-    <PackageReference Include="Postulate.SqlServer" Version="1.3.16" />
   </ItemGroup>
 
   <ItemGroup>
