settled on name SqlMigrator, object creation working

--- a/SqlIntegration.Library/SqlIntegration.Library.csproj
+++ b/SqlIntegration.Library/SqlIntegration.Library.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="AdoUtil.Library" Version="1.1.1" />
     <PackageReference Include="Dapper" Version="2.0.30" />
+    <PackageReference Include="Dapper.CX.Base" Version="1.0.4" />
     <PackageReference Include="Dapper.CX.SqlServer" Version="1.0.3" />
     <PackageReference Include="Dapper.QX" Version="1.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
@@ -32,10 +33,6 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
