--- a/SqlIntegration.Library/SqlIntegration.Library.csproj
+++ b/SqlIntegration.Library/SqlIntegration.Library.csproj
@@ -23,11 +23,11 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.30" />
-    <PackageReference Include="Dapper.CX.Base" Version="1.0.6" />
-    <PackageReference Include="Dapper.CX.SqlServer" Version="1.0.4" />
-    <PackageReference Include="Dapper.QX" Version="1.0.0" />
+    <PackageReference Include="Dapper.CX.Base" Version="1.0.14" />
+    <PackageReference Include="Dapper.CX.SqlServer" Version="1.0.14" />
+    <PackageReference Include="Dapper.QX" Version="1.0.6" />
     <PackageReference Include="DataTables.Library" Version="2.0.1" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
